--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     h1{
         text-align: center;
         color: rgb(71, 2, 2);
-        font-family: 'Courier New', Courier, monospace;
+        font-family: Georgia, 'Times New Roman', Times, serif;
         font-size: 35px ;
         font-style: italic;
     }
@@ -62,13 +62,17 @@
 
 </style>
 <body>
+
+    <marquee width =100%><font color = "brown"><b>Information about my College!!</b></font></marquee>
+&nbsp;
+
     <h1>
         <b>
-            <img src="New Logo.png" alt="New Logo" width="60px">
+            <img src="New Logo.png" alt="New Logo" width="75px">
             <i>
                 <u> &nbsp; INDIAN INSTITUTE OF INFORMATION TECHNOLOGY, KOTA &nbsp; </u>
             </i>
-            <img src="MNIT.png" alt="Mentor College Logo" width="60px">
+            <img src="MNIT.png" alt="Mentor College Logo" width="75px">
         </b>
     </h1> 
     <div class = "container flex items-center">
